--- a/notebooks/credibility_survey2_notebook.rmd
+++ b/notebooks/credibility_survey2_notebook.rmd
@@ -12,6 +12,7 @@ library(tidyverse)
 library(grid)
 library(gridExtra)
 library(stargazer)
+library(lme4)
 
 
 theme_credibility <- theme_minimal() + 
@@ -93,9 +94,10 @@ summary(survey2_cleaned %>%
 
 First we construct the visualization of the regression coefficients
 ```{r}
-model <- lm(Answer.Credibility ~ 
+model <- lmer(Answer.Credibility ~
               ownership + visual + reception + Title + # feature variables
-              topic + Answer.Gender + Answer.Education + Answer.US + Answer.Age, #control variables
+              topic + Answer.Gender + Answer.Education + Answer.US + Answer.Age + #control variables
+              (1|HITId),
             survey2_cleaned)
 
 broom::tidy(model, conf.int = T)
@@ -124,7 +126,9 @@ name_mapping = c(
   "Answer.GenderMale" = "Gender: Male",
   "Answer.EducationUniversity+" = "Education: Univeristy+",
   "Answer.USYes" = "Location: In the U.S.",
-  "Answer.Age" = "Age"
+  "Answer.Age" = "Age",
+  "sd_(Intercept).Worker.Id" = "SD(Worker ID)",
+  "sd_Observation.Residual" = "SD(Obs. residual)"
 )
 
 # Convert to a tidy model
