correct univeristy typo :)

--- a/notebooks/credibility_survey1_notebook.rmd
+++ b/notebooks/credibility_survey1_notebook.rmd
@@ -212,7 +212,7 @@ name_mapping = c(
   "Studysweeteners" = "Topic: Sweeteners",
   "Studyvitamin" = "Topic: Vitamins",
   "Familiarity" = "Familiarity",
-  "Worker.EducationUniversity+" = "Education: Univeristy+",
+  "Worker.EducationUniversity+" = "Education: University+",
   "Worker.Age" = "Age",
   "Worker.GenderMale" = "Gender: Male", 
   "Worker.GenderOther/UNK" = "Gender: Other/Unk",
